PRIMER PASO PARA ALGO QUE ME GUSTA

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 </article>
             </div>
         </section>
+        <div>HOLA</div>
     </main>
     <footer class="footer">
     </footer>
