--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!--FIN DEL HEADER-->
     <main>
         <!--Preguntas de por que es especial fade-down-->
-        <section class="container about">
+        <section class=" about">
             <h2 class="subtitle" data-aos="fade-up" data-aos-delay = "200" data-aos-duration = "1000">RAZONES POR LAS QUE ERES ESPECIAL PARA MI Y MUCHAS PERSONAS MAS</h2>
             <p class="about__paragraph" data-aos="fade-down" data-aos-delay = "200" data-aos-duration = "1000">Muchas personas dicen que hay personas es
                 peciales, y baya que si lo son, por eso tu me encantas</p>
@@ -95,6 +95,96 @@
             <div class = "right-section" data-aos="fade-left" data-aos-delay = "200" data-aos-duration = "1000">
             </div>  
         </section>
+        <!--SECCION DE FOTOS CON AMIGOS-->
+        <section class = "contenedor_Fotos">
+            <div class="mensaje">
+                <h1>ESTAS FOTOS ESTAN PRECIOSAS</h1>
+            </div>
+        </section>
+        <!--------------------SECCION DE FELICITAACIONES---------------->
+        <div class="card-ward">
+            <!--IMG 1-->
+            <article class="card">
+                <header class="header-card">
+                    <img src="./IMG/alpez-Suizaos.jpg" alt="">
+                </header>
+                <footer class = "footer-card">
+                    <div class="categoria-card">
+                        <span class = "categoria">Categoria</span>
+                    </div>
+                    <div class="txt-card">
+                        <h3>HOLAAAA</h3>
+                        <p>KSJDNSJNDKJSKDJNS DKSJNDJNSKDNSKD KSJDNSJNDKJSKDJNSSKJDNKSD
+                            SMNDSKJNDKJSD</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="./IMG/20230409_144739.jpg" alt="">
+                        </div>
+                        <div class="text-perfil-card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+            <!--IMG 2-->
+            <article class="card">
+                <header class="header-card">
+                    <img src="./IMG/alpez-Suizaos.jpg" alt="">
+                </header>
+                <footer class = "footer-card">
+                    <div class="categoria-card">
+                        <span class = "categoria">Categoria</span>
+                    </div>
+                    <div class="txt-card">
+                        <h3>HOLAAAA</h3>
+                        <p>KSJDNSJNDKJSKDJNS DKSJNDJNSKDNSKD KSJDNSJNDKJSKDJNSSKJDNKSD
+                            SMNDSKJNDKJSD
+                        sdjdjsndskjdnksjndkjsnkdjnksj
+                    sdiiertyuioiuysdgbshdbjsbdjbsjdbjshbdjbsjdb
+                sdhsdsdijsjdjisudjisjdsd
+            sdushduhsiudiusdiushdihsdih</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="./IMG/20230409_144739.jpg" alt="">
+                        </div>
+                        <div class="text-perfil-card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+            <!--IMG 3-->
+            <article class="card">
+                <header class="header-card">
+                    <img src="./IMG/alpez-Suizaos.jpg" alt="">
+                </header>
+                <footer class = "footer-card">
+                    <div class="categoria-card">
+                        <span class = "categoria">Categoria</span>
+                    </div>
+                    <div class="txt-card">
+                        <h3>HOLAAAA</h3>
+                        <p>KSJDNSJNDKJSKDJNS DKSJNDJNSKDNSKD KSJDNSJNDKJSKDJNSSKJDNKSD
+                            SMNDSKJNDKJSD</p>
+                    </div>
+                    <div class="perfil-card">
+                        <div class="img-perfil-card">
+                            <img src="./IMG/20230409_144739.jpg" alt="">
+                        </div>
+                        <div class="text-perfil-card">
+                            <span>Nombre</span>
+                            <span>Fecha</span>
+                        </div>
+                    </div>
+                </footer>
+            </article>
+            <!---IMG 4-->
+        </div>
+        <!---SECCION FELICITACIONES 4-->
         <div>HOLA</div>
     </main>
     <footer class="footer">
